Work around an IE bug on word-wrapping links
IE 11 suffers from a bug[0] where long links aren't properly-wrapped
using `word-wrap`. Rather than go down the rabbithole of hacks to
rectify this we're now just always displaying the list vertically for
IE users without affecting the main audience.

[0] https://www.webdevelopmentreference.com/ie-11-word-wrap-word-break/

--- a/app/webpacker/styles/home.scss
+++ b/app/webpacker/styles/home.scss
@@ -192,6 +192,16 @@
         @media (max-width: $steps-row-limit) {
             flex-direction: column;
         }
+
+        /*  This is a bit of a hack to target IE, which has a horrendous bug
+            that prevents it from wrapping text inside hyperlinks. So we
+            needn't wrap, always display the steps in a column format on IE */
+        @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+            flex-direction: column;
+            > * {
+                padding: .5em 0;
+            }
+        }
     }
 
     &__step {
